--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nuxt start"
   },
   "dependencies": {
+    "@nuxt/content": "^1.14.0",
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/robots": "^2.4.2",
     "@nuxtjs/sitemap": "^2.4.0",
@@ -15,7 +16,9 @@
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.3.1",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "lodash": "^4.17.21",
+    "nuxt": "^2.14.6",
+    "vue-lodash": "^2.1.2"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.1",
